# returns-resolution-agent

./: .gitignore  LICENSE  README.md  app.py  demo.py  main.py  orchestrator.py  pyproject.toml
agents/: intake_agent.py  policy_agent.py
azd-ai-starter-basic/: Dockerfile  agent.yaml  azure.yaml  pyproject.toml  server.py
azd-ai-starter-basic/agents/: intake_agent.py  policy_agent.py  resolution_agent.py
azd-ai-starter-basic/infra/: main.bicep  main.parameters.json
azd-ai-starter-basic/infra/core/ai/: ai-project.bicep
data/: product_catalog.json  return_policy.md  return_requests.json
