[project]
name = "returns-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-agents>=1.1.0",
    "azure-ai-projects>=2.1.0",
    "azure-core-tracing-opentelemetry>=1.0.0b13",
    "azure-identity>=1.25.3",
    "azure-identity-broker>=1.3.0",
    "azure-monitor-opentelemetry>=1.8.8",
    "fastapi>=0.136.3",
    "opentelemetry-sdk>=1.40.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.48.0",
]
